@@ -1,6 +1,7 @@
 Release Note
 
 * current
+  * fixed SetupperAtlas to ignore DQFrozenDatasetException when making _dis
   * added support for multiple ES consumer
   * changed changeTaskPriority to propagate changes to jobs too 
   * fixed dataset lookup by file GUID to allow wildcard search
